pre wrap text to fix overflow issue

--- a/src/app/components/core/configuration-manager/plugin-persist-data/plugin-persist-data.component.css
+++ b/src/app/components/core/configuration-manager/plugin-persist-data/plugin-persist-data.component.css
@@ -14,3 +14,7 @@
   .dropdown {
     width: auto !important;
   }
+
+  pre {
+    white-space: pre-wrap;
+  }
